fix: rename CANONICAL_PATH to HUGO_CANONICAL_PATH for Hugo security
Hugo's default security policy only allows getenv for HUGO_* prefixed
environment variables. Renamed to avoid needing custom security config.

--- a/themes/hugo-tutorials/layouts/partials/header.html
+++ b/themes/hugo-tutorials/layouts/partials/header.html
@@ -23,8 +23,8 @@
     {{ end }}
   </title>
   {{- $canonicalUrl := string .Permalink -}}
-  {{- if (ne (getenv "CANONICAL_PATH") "") -}}
-  {{- $canonicalUrl = (replace $canonicalUrl (trim .Site.BaseURL "/") (trim (getenv "CANONICAL_PATH") "/")) -}}
+  {{- if (ne (getenv "HUGO_CANONICAL_PATH") "") -}}
+  {{- $canonicalUrl = (replace $canonicalUrl (trim .Site.BaseURL "/") (trim (getenv "HUGO_CANONICAL_PATH") "/")) -}}
   {{- end }}
   <link rel="canonical" href="{{ $canonicalUrl }}" />
 
