fix: update theme partials for local Dgraph development
- Use .Content.Site.Params for endpoint URLs in partials
- Change "Dgraph Cloud" labels to "Dgraph" for local dev
- Remove API key requirements for local schema push
- Simplify endpoint configuration modal

--- a/themes/hugo-tutorials/layouts/_default/single.html
+++ b/themes/hugo-tutorials/layouts/_default/single.html
@@ -34,7 +34,7 @@
                 {{ else }}
                     {{ if eq .Params.iFrameRatel 1 }}
                         <div class="lesson__code modal-bakdrop block">
-                            <iframe class='ratel {{ if eq .Params.endpoint "/mutate" }}mutate{{ else }}query{{ end }}' {{ if ne .Params.endpoint "/mutate"}}data-code='{{ $codeContent }}'{{ end }} src="https://play.dgraph.io/?latest" style="width: 100%; height: 100%;" ></iframe>
+                            <iframe class='ratel {{ if eq .Params.endpoint "/mutate" }}mutate{{ else }}query{{ end }}' {{ if ne .Params.endpoint "/mutate"}}data-code='{{ $codeContent }}'{{ end }} src="{{ .Site.Params.url.dgraphPlay }}/?latest" style="width: 100%; height: 100%;" ></iframe>
                         </div>
                     {{ else if eq .Params.type "graphql/schema" }}
                         <div class="lesson__code modal-bakdrop block">
