refactor: remove Dgraph Cloud references and update for local dev
- Remove dgraphCloud, dgraphCloudPricing, and dgraphPricing URLs from config
- Update dgraphDocs to docs.dgraph.io and dgraphTour to local root
- Remove Pricing link from navigation
- Remove Sign In/Contact Us buttons from nav (desktop and tablet)
- Remove Start Free Trial and See Pricing Plans buttons from footer
- Remove Pricing link from footer links
- Update graphqlintro menu description to remove Cloud reference
- Update content files to reference local Dgraph instance instead of Cloud
- Remove API Key input field from runnable settings modal

--- a/themes/hugo-tutorials/layouts/partials/page_footer.html
+++ b/themes/hugo-tutorials/layouts/partials/page_footer.html
@@ -97,21 +97,6 @@
                 <p class="text-color-cultured _60">
                   Dgraph gives you the scalability and performance you need with the pricing and transparency you expect. Start building today with the world’s most advanced and performant graph database with native GraphQL.
                 </p>
-                <div class="footer_top-cta_button">
-                  <a href="{{ .Site.Params.url.dgraphCloudPricing }}" target="_blank" class="button-red is-icon w-inline-block">
-                    <div>Start Free Trial</div>
-                    <div class="button-icon-embed-whaite w-embed">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M14.351 11.7475V2.48994C14.351 1.98552 13.7451 1.7285 13.3824 2.07907L3.87339 11.2702C3.50397 11.6273 3.75674 12.2525 4.27052 12.2525H9.64896L9.64896 21.5101C9.64896 22.0145 10.2548 22.2715 10.6175 21.921L20.1266 12.7298C20.496 12.3728 20.2432 11.7475 19.7294 11.7475L14.351 11.7475Z"
-                          fill="currentColor"
-                        ></path>
-                      </svg>
-                    </div> </a
-                  ><a href="/pricing" class="button-ghost white w-button">See Pricing Plans</a>
-                </div>
               </div>
               <div class="footer_top-ctas">
                 <div class="footer_top-cta-card">
@@ -148,8 +133,7 @@
                     <div class="footer_links_row">
                       <div class="footer-link-heading">Dgraph</div>
                       <div class="footer_links-row">
-                        <a href="/product" class="footer_link">Product</a><a href="/solutions" class="footer_link">Solutions</a><a href="/pricing" target="_blank" class="footer_link">Pricing</a
-                        ><a href="/contact" target="_blank" class="footer_link">Contact Us</a>
+                        <a href="/product" class="footer_link">Product</a><a href="/solutions" class="footer_link">Solutions</a><a href="/contact" target="_blank" class="footer_link">Contact Us</a>
                       </div>
                     </div>
                     <div id="w-node-bab73d88-44a0-8afc-cfae-1fed659a1ced-d55847bb" class="footer_links_row last">
