--- a/themes/hugo-tutorials/layouts/partials/page_nav.html
+++ b/themes/hugo-tutorials/layouts/partials/page_nav.html
@@ -13,13 +13,16 @@
   <div class="header-container">
     <a href="/" aria-current="page" class="dgraph_logo">
       <div class="nav_logo-embed w-embed">
-        <img src='{{ relURL "/images/DgraphByHypermode_light.svg" }}' alt="Dgraph by Hypermode logo" height="38" width="123" />
+        <img src='{{ relURL "/images/dgraph-logo.png" }}' alt="Dgraph logo" height="38" />
       </div>
     </a>
 
     <nav role="navigation" class="dgraph-menu">
       <a href="/" class="navigation-link">
-        <div>Tour</div>
+        <div>Tour Home</div>
+      </a>
+      <a href="http://localhost:8001" class="navigation-link" target="_blank">
+        <div>Ratel</div>
       </a>
       <a href="https://discuss.dgraph.io" class="navigation-link">
         <div>Discuss</div>
