fix: improve runnable panel overflow handling
- Add overflow: auto to .lesson__code to prevent layout push
- Add overflow-x: auto to .runnable .output for wide content
- Reformat comments in blocksvars/3.txt

--- a/themes/hugo-tutorials/static/css/theme.css
+++ b/themes/hugo-tutorials/static/css/theme.css
@@ -486,6 +486,10 @@
   width: unset;
 }
 
+.lesson__code {
+  overflow: auto;
+}
+
 .tour-container-new .page-intro {
   border-bottom: none;
   padding: 120px 0 0;
